Fix overlapping title and buttons
- Increase button-box top from 80px to 1400px
- Increase counter top from 140px to 1450px
- Moves buttons and counter below the large title to prevent overlap

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ h1 {
 
 .button-box {
     position: absolute;
-    top: 80px;
+    top: 1400px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -60,7 +60,7 @@ h1 {
 
 #click-counter {
     position: absolute;
-    top: 140px;
+    top: 1450px;
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
